--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,8 +1,11 @@
 body {
   font-family: "Oswald", sans-serif;
   margin: 0;
-  background: black;
   color: white;
+  background-image: url("./img/3.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .container {
