--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -14,12 +14,15 @@ body {
 }
 
 .register {
-  height: 80vh;
+  display: flex;
+  margin-left: auto;
+}
+.login {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
-.register form {
+.register form,
+.login form {
   width: 500px;
   display: flex;
   flex-direction: column;
@@ -28,12 +31,13 @@ body {
   margin-right: 2%;
 }
 
-.register input {
+.register input,
+.login input {
   width: calc(100% - 20px);
   background: black;
   color: white;
-  padding: 10px;
-  margin-bottom: 35px;
+  padding: 5px;
+  margin-bottom: 10px;
   font-size: 16px;
   border: none;
   border-radius: 0;
@@ -46,7 +50,7 @@ body {
 }
 
 .register button,
-.reg-nav {
+.login button {
   margin: 0 auto;
   padding: 12px;
   font-size: 16px;
@@ -60,14 +64,14 @@ body {
   transition: 0.5s;
 }
 
-.register button:hover,
-.reg-nav:hover {
+.register button,
+.login button:hover {
   background: #86096b;
   letter-spacing: 1px;
 }
 
-.register button:active,
-.reg-nav:active {
+.register button,
+.login button:active {
   background: green;
 }
 
@@ -78,58 +82,6 @@ body {
   font-weight: bold;
   letter-spacing: 1px;
   padding-bottom: 15px;
-}
-
-.title {
-  font-size: 40px;
-  font-weight: bold;
-  display: flex;
-  color: #c10c99;
-}
-
-.find {
-  border-radius: 15px;
-  background: #c10c99;
-  color: #000;
-  padding: 3px 3px;
-  letter-spacing: 2px;
-  text-decoration: none;
-}
-
-.me {
-  color: white;
-  margin-left: 10px;
-  letter-spacing: 2px;
-  text-decoration: none;
-  font-size: 44px;
-}
-
-.d-flex {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 5px 5px;
-}
-
-.element {
-  margin-left: 700px;
-}
-.element-nav {
-  padding: 15px;
-  font-size: 30px;
-  font-weight: bold;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  text-decoration: none;
-  color: white;
-  transition: 0.5s;
-  margin: 3px;
-}
-
-.element-nav:hover {
-  color: #c10c99;
-  letter-spacing: 1.5px;
 }
 
 .icons {
