update login css

--- a/frontend/src/header.css
+++ b/frontend/src/header.css
@@ -70,6 +70,6 @@
 .acc {
   font-size: 30px;
   font-weight: bold;
-  color: #c10c99; /* لون النص الخاص بك */
+  color: #c10c99;
   margin: 15px;
 }
