--- a/frontend/src/confirm.css
+++ b/frontend/src/confirm.css
@@ -11,55 +11,19 @@
   align-items: center;
   font-family: "Oswald", sans-serif;
   margin: 0;
-  color: white;
-  background-image: url("./img/3.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  height: 85vh;
 }
 
 .image {
-  max-width: 90%;
-  max-height: 90%;
+  max-width: 95%;
+  max-height: 95%;
+  padding: 20px;
+  background: #302b90;
+  border-radius: 20px;
+  box-shadow: 0px 2px 300px black;
 }
 
-.buttons-home {
-  display: flex;
-  justify-content: center;
-  width: 90%;
-}
-
-.no-button,
-.yes-button {
-  width: 100px;
-  height: 50px;
-  border-radius: 10px;
-  font-size: 20px;
-  font-weight: bold;
+.text {
   color: black;
-  cursor: pointer;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.no-button {
-  background-color: darkblue;
-  color: white;
-}
-
-.no-button:hover {
-  background-color: blue;
-}
-
-.yes-button {
-  background-color: #c10c99;
-}
-
-.yes-button:hover {
-  background-color: #85086a;
 }
 
 .loading-box {
@@ -102,6 +66,9 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .sad-face {
@@ -110,29 +77,33 @@
   margin-bottom: 20px;
 }
 .user-details {
-  background-color: black;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin: 20px;
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  font-style: italic;
+  padding: 2px;
+  margin: 2px;
+  color: black;
+}
+.user-details h1 {
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-bottom: 5px;
 }
 
 .user-details h3 {
-  font-family: Arial, sans-serif;
-  color: white;
   font-weight: bold;
-  font-style: italic;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 2;
-  border: 2px solid rgb(110, 104, 104);
+  border: 2px solid #302b90;
   margin-bottom: 15px;
 }
-.user-details h2:first-child {
-  margin-top: 0;
-}
+
 .back-button {
   display: block;
   margin-bottom: 20px;
   text-decoration: none;
   font-size: 70px;
-  color: #c10c99;
+  color: #4d47c3;
 }
