--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -17,6 +17,8 @@ body {
   display: flex;
   align-items: center;
   min-height: 80vh;
+  margin: auto;
+  margin-right: 9%;
 }
 
 .login form {
@@ -24,7 +26,11 @@ body {
   display: flex;
   flex-direction: column;
   letter-spacing: 1px;
-  margin: auto;
+  margin: 3%;
+  padding: 50px;
+  border-radius: 20px;
+  box-shadow: 0px 2px 20px #4d47c3;
+  backdrop-filter: blur(1px);
 }
 .login input {
   width: calc(100% - 20px);
@@ -140,6 +146,7 @@ body {
   color: white;
   border-radius: 20px;
   box-shadow: 0px 2px 15px black;
+  backdrop-filter: blur(5px);
   letter-spacing: 2px;
 }
 .home input {
