--- a/frontend/src/confirm.css
+++ b/frontend/src/confirm.css
@@ -107,3 +107,14 @@
   font-size: 70px;
   color: #4d47c3;
 }
+.match {
+  color: red;
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  cursor: pointer;
+  text-decoration: none;
+}
+.match :hover {
+  letter-spacing: 5px;
+}
